Made updates and fixes to dark mode and overall CSS design

--- a/AsyncAcademy/Pages/Shared/_Layout.cshtml.css
+++ b/AsyncAcademy/Pages/Shared/_Layout.cshtml.css
@@ -57,3 +57,11 @@ button.accept-policy {
 }
 
 
+
+
+body.dark a {
+    color: red;
+}
+
+
+
